BS css, index progress

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- Latest compiled and minified CSS -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>Super Sprinter 3000 - Hadroon</title>
+        <link rel="stylesheet" href="/static/css/bootstrap.css?v={{ range(1, 51) | random }}">
 
-<head>
-    <title>Some Title</title>
-</head>
+        <!-- Own main css -->
+        <link rel="stylesheet" href="/static/css/main.css?v={{ range(1, 51) | random }}">
 
-<body>
-    <h1>Hello this is our fancy website!</h1>
-</body>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="/static/js/bootstrap.js"></script>
+    </head>
+    <body>
+    <div class="container">
+        <div class="row" style="width:80%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
+            <form method="POST" action="">
+                <div class="form-group">
+                    <label>Question title:</label>
+                    <input type="text" class="form-control" placeholder="Text input" name="question_title">
+                </div>
+                <div class="form-group">
+                    <label>Message</label>
+                    <textarea class="form-control" rows="3" name="message"></textarea>
+                </div>
+                <button type="submit" style="background: none; border: none; font-size: 36px;"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"/></button>
+        </form>
+        </div>
+        <div class="row">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Question title 
+                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
+                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
+                        </th>
+                        <th>Answers
+                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
+                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
+                        </th>
+                        <th>Views
+                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
+                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
+                        </th>
+                        <th>Votes
+                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
+                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
+                        </th>
+                        <th>Created
+                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
+                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
+                        </th>
+                    <tr>
+                </thead>
+                <tbody>
+                {% for value in data_list %}
+                    <tr>
+                        <td>{{ value[0] }}</td>
+                        <td>{{ value[0] }}</td>
+                        <td>{{ value[0] }}</td>
+                        <td>{{ value[0] }}</td>
+                        <td>{{ value[0] }}</td>
+                    </tr>
+                {% endfor %}
+    </tbody>
+</table>
+        </div>
+    </div>
+    </body>
+</html>
