--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <label>Message</label>
                     <textarea class="form-control" rows="3" name="message"></textarea>
                 </div>
-                <button type="submit" style="background: none; border: none; font-size: 36px;"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"/></button>
+                <button type="submit" name="create" value="Create" class="btn">Submit</button>
         </form>
         </div>
         <div class="row">
