--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <body>
     <div class="container">
         <div class="row" style="width:80%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
-            <form method="POST" action="">
+            <form method="POST" action="submit-question">
                 <div class="form-group">
                     <label>Question title:</label>
                     <input type="text" class="form-control" placeholder="Text input" name="question_title">
