Counting answers, back button

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                         <td>
                             <a href="answer/{{ value[0] }}" style="color:white">{{ value[4] }}</a>
                         </td>
-                        <td>{{ value[0] }}</td>
+                        <td>{{ answer_counter[value[0]] }}</td>
                         <td>{{ value[2] }}</td>
                         <td>{{ value[3] }}</td>
                         <td>{{ value[1] }}</td>
