--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,9 @@
                             <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
                             <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
                         </th>
+                        <th>
+                            Delete
+                        </th>
                     <tr>
                 </thead>
                 <tbody>
@@ -61,7 +64,7 @@
                         <td>
                             <a href="answer/{{ value[0] }}" style="color:white">{{ value[4] }}</a>
                         </td>
-                        <td>{{ answer_counter[value[0]] }}</td>
+                        <td>{{ value[7] }}</td>
                         <td>{{ value[2] }}</td>
                         <td>{{ value[3] }}</td>
                         <td>{{ value[1] }}</td>
