--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <label>Message</label>
                     <textarea class="form-control" rows="3" name="message" required></textarea>
                 </div>
-                <button type="submit" name="create" value="Create" class="btn">Submit</button>
+                <button type="submit" name="create" value="Create" class="btn btn-success">Submit</button>
         </form>
         </div>
         <div class="row">
@@ -69,7 +69,7 @@
                         <td>{{ value[3] }}</td>
                         <td>{{ value[1] }}</td>
                         <td><form method="POST" action="/question/{{ value[0] }}/delete">
-                            <button type="submit" name="delete-question" class="btn">Delete</button>
+                            <button type="submit" name="delete-question" class="btn btn-info">Delete</button>
                             </form></td>
                     </tr>
                 {% endfor %}
