Fixed delete and update button

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,9 @@
                         <td>{{ value[2] }}</td>
                         <td>{{ value[3] }}</td>
                         <td>{{ value[1] }}</td>
-                        <td><form method="POST" action="/question/{{ value[0] }}/delete">
-                            <button type="submit" name="delete-question" class="btn">Delete</button>
-                            </form></td>
+                        <td><a href="/question/{{ value[0] }}/delete">
+                            <button type="button" name="delete-question" class="btn">Delete</button></a>
+                            </td>
                     </tr>
                 {% endfor %}
     </tbody>
