--- a/templates/answer.html
+++ b/templates/answer.html
@@ -20,9 +20,9 @@
         <div class="row" style="width:80%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
             <h2> {{ question[4] }} </h2>
             <p> {{ question[5] }} </p>
-            <form method="GET" action="/update/{{ question_id }}">
-                            <button type="submit" name="update-question" class="btn btn-success">Update</button>
-                            </form>
+            <a href="/update/{{ question[0] }}">
+                            <button type="button" name="update-question" class="btn btn-success">Update</button>
+                            </a>
         <div class="row" style=" margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
             <form method="POST" action="/submit-answer/{{ question_id }}">
                 <div class="form-group">
