--- a/templates/answer.html
+++ b/templates/answer.html
@@ -22,6 +22,7 @@
             <a href="/update/{{ question[0] }}">
                             <button type="button" name="update-question" class="btn btn-success">Update</button>
                             </a>
+            <a href="/index" class="btn btn-success">Back</a>
         <div class="row" style=" margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
             <form method="POST" action="/submit-answer/{{ question_id }}">
                 <div class="form-group">
