html minor changes

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -22,7 +22,6 @@
             <a href="/update/{{ question[0] }}">
                             <button type="button" name="update-question" class="btn btn-success">Update</button>
                             </a>
-            <a href="/index" class="btn btn-success">Back</a>
         <div class="row" style=" margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
             <form method="POST" action="/submit-answer/{{ question_id }}">
                 <div class="form-group">
@@ -30,6 +29,7 @@
                     <textarea class="form-control" rows="3" name="answer" required></textarea>
                 </div>
                 <button type="submit" name="create" value="Create" class="btn btn-success">Submit</button>
+                <a href="/index" class="btn btn-danger">Back</a>
             </form>
         </div>
         <div class="row">
@@ -53,10 +53,10 @@
                         <td><blockquote>{{ value[4] }}</blockquote></td>
                         <td style="min-width: 100px;">{{ value[2] }}
                             <a href="/answer/{{ question[0] }}/{{ value[0] }}/vote_up">
-                                <span class="glyphicon glyphicon-arrow-up" aria-hidden="true" style="color:green;"/>
+                                <span class="glyphicon glyphicon-arrow-up" aria-hidden="true" style="color:#5CB85C;"/>
                             </a>
                             <a href="/answer/{{ question[0] }}/{{ value[0] }}/vote_down">
-                                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true" style="color:red;"/>
+                                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true" style="color:#D9534F;"/>
                             </a>
                         </td>
                         <td style="min-width: 100px;">{{ value[1] }}</td>
