--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Super Sprinter 3000 - Hadroon</title>
+        <title>Ask Mate - shoot your question</title>
         <link rel="stylesheet" href="/static/css/bootstrap.css?v={{ range(1, 51) | random }}">
 
         <!-- Own main css -->
@@ -46,8 +46,8 @@
                             <a href="/index/2/desc" class="glyphicon glyphicon-arrow-down" aria-hidden="true"/></a>
                         </th>
                         <th>Votes
-                            <a href="/index/3/desc" class="glyphicon glyphicon-arrow-up" aria-hidden="true"/></a>
-                            <a href="/index/3/asc" class="glyphicon glyphicon-arrow-down" aria-hidden="true"/></a>
+                            <a href="/index/3/asc" class="glyphicon glyphicon-arrow-up" aria-hidden="true"/></a>
+                            <a href="/index/3/desc" class="glyphicon glyphicon-arrow-down" aria-hidden="true"/></a>
                         </th>
                         <th>Created
                             <a href="/index/1/asc" class="glyphicon glyphicon-arrow-up" aria-hidden="true"/></a>
@@ -68,15 +68,15 @@
                         <td>{{ value[2] }}</td>
                         <td>{{ value[3] }}
                             <a href="/index/vote_up/{{ value[0] }}">
-                                <span class="glyphicon glyphicon-arrow-up" aria-hidden="true" style="color:green;"/>
+                                <span class="glyphicon glyphicon-arrow-up" aria-hidden="true" style="color:#5CB85C;"/>
                             </a>
                             <a href="/index/vote_down/{{ value[0] }}">
-                                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true" style="color:red;"/>
+                                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true" style="color:#D9534F;"/>
                             </a>
                         </td>
                         <td>{{ value[1] }}</td>
                         <td><a href="/question/{{ value[0] }}/delete">
-                            <button type="button" name="delete-question" class="btn">Delete</button></a>
+                            <button type="button" name="delete-question" class="btn btn-info">Delete</button></a>
                             </td>
                     </tr>
                 {% endfor %}
