--- a/templates/answer.html
+++ b/templates/answer.html
@@ -20,7 +20,7 @@
             <h2> {{ question[4] }} </h2>
             <p> {{ question[5] }} </p>
             <a href="/update/{{ question[0] }}">
-                            <button type="button" name="update-question" class="btn btn-success">Update</button>
+                            <button type="button" name="update-question" class="btn btn-info">Update</button>
                             </a>
         <div class="row" style=" margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
             <form method="POST" action="/submit-answer/{{ question_id }}">
