--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <form method="POST" action="submit-question">
                 <div class="form-group">
                     <label>Question title:</label>
-                    <input type="text" class="form-control" placeholder="Text input" name="question_title" required>
+                    <input type="text" class="form-control" placeholder="Text input" name="question_title" pattern=".{0}|.{10,}" title="Title should be 10 characters long minimum!" required>
                 </div>
                 <div class="form-group">
                     <label>Message</label>
