--- a/templates/update.html
+++ b/templates/update.html
@@ -22,7 +22,7 @@
 
                 <div class="form-group">
                     <label>Question title:</label>
-                    <input type="text" class="form-control" placeholder="Text input" name="updated-question_title" value="{{ data[4] }}" required>
+                    <input type="text" class="form-control" placeholder="Text input" name="updated-question_title" value="{{ data[4] }}" pattern=".{0}|.{10,}" title="Title should be 10 characters long minimum!" required>
                 </div>
                 <div class="form-group">
                     <label>Message</label>
