answer site sorting

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -38,12 +38,12 @@
                     <tr>
                         <th>Answers</th>
                         <th>Votes
-                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
-                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
+                            <a href="/answer/{{ question[0] }}/2/asc" class="glyphicon glyphicon-arrow-up" aria-hidden="true"/></a>
+                            <a href="/answer/{{ question[0] }}/2/desc" class="glyphicon glyphicon-arrow-down" aria-hidden="true"/></a>
                         </th>
                         <th>Date
-                            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"/>
-                            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"/>
+                            <a href="/answer/{{ question[0] }}/1/asc" class="glyphicon glyphicon-arrow-up" aria-hidden="true"/></a>
+                            <a href="/answer/{{ question[0] }}/1/desc" class="glyphicon glyphicon-arrow-down" aria-hidden="true"/></a>
                         </th>
                     <tr>
                 </thead>
