--- a/templates/answer.html
+++ b/templates/answer.html
@@ -45,6 +45,7 @@
                             <a href="/answer/{{ question[0] }}/1/asc" class="glyphicon glyphicon-arrow-up" aria-hidden="true"/></a>
                             <a href="/answer/{{ question[0] }}/1/desc" class="glyphicon glyphicon-arrow-down" aria-hidden="true"/></a>
                         </th>
+                        <th>Delete</th>
                     <tr>
                 </thead>
                 <tbody>
@@ -60,8 +61,8 @@
                             </a>
                         </td>
                         <td style="min-width: 100px;">{{ value[1] }}</td>
-                        <td style="min-width: 100px;"><a href="/answer/{{ value[0] }}/delete">
-                            <button type="button" name="delete-question" class="btn btn-danger">Delete</button></a>
+                        <td style="min-width: 100px;"><a href="/{{ question[0] }}/answer/{{ value[0] }}/delete" class="btn btn-danger">Delete
+                            </a>
                             </td>
                     </tr>
                     {% endfor %}
