--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <body>
     <div class="container">
         <div class="row" style="width:80%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
-            <form method="POST" action="/submit-question">
+            <form method="POST" action="/submit-question" enctype="multipart/form-data">
                 <div class="form-group">
                     <label>Question title:</label>
                     <input type="text" class="form-control" placeholder="Text input" name="question_title" pattern=".{0}|.{10,}" title="Title should be 10 characters long minimum!" required>
@@ -25,6 +25,10 @@
                 <div class="form-group">
                     <label>Message</label>
                     <textarea class="form-control" rows="3" name="message" required></textarea>
+                </div>
+                    <div class="form-group">
+                        <label>Image</label>
+                        <input class="btn btn-default" type="file" name="file">   
                 </div>
                 <button type="submit" name="create" value="Create" class="btn btn-success">Submit</button>
         </form>
